add class and functions wip

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="https://kit.fontawesome.com/28caf18a35.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="main-div"></div>
     <script src="./draw.js"></script>
     <script src="./index.js"></script>
+    <script src="./solver.js"></script>
+    <script src="./algorithms.js"></script>
 </body>
 </html>
