--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="./MineFieldGenerator.js"></script>
     <script src="./MineSweeperSolver.js"></script>
     <script src="./index.js"></script>
+    <script src="./analytics.js"></script>
 </body>
 
 </html>
